--- a/src/components/barber/card.css
+++ b/src/components/barber/card.css
@@ -1,17 +1,3 @@
-* {
-  margin: 0px;
-  padding: 0px;
-}
-*,
-*:after,
-*:before {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
 .clearfix:before,
 .clearfix:after {
   display: table;
@@ -21,7 +7,7 @@
   clear: both;
 }
 
-body {
+.barber-body {
   background: #76777c;
   color: #f1f1f1;
   font-weight: normal;
@@ -29,22 +15,22 @@ body {
   font-family: 'Roboto', Arial, sans-serif;
 }
 
-input:focus,
+/* input:focus,
 textarea:focus,
 keygen:focus,
 select:focus {
   outline: none;
-}
-::-moz-placeholder {
+} */
+/* ::-moz-placeholder {
   color: #666;
   font-weight: 300;
   opacity: 1;
-}
+} */
 
-::-webkit-input-placeholder {
+/* ::-webkit-input-placeholder {
   color: #666;
   font-weight: 300;
-}
+} */
 
 .grid .col2 {
   width: 50%;
