--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -4,13 +4,13 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 90%;
+    width: 100%;
     z-index: 200;
-    background-color: #1f2024;
+    background-color: #1F2024;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 5%;
+    padding: 15px 5%;
 }
 .ahnava{    
     display: inline-block;
