--- a/src/components/barber/card.module.css
+++ b/src/components/barber/card.module.css
@@ -21,13 +21,13 @@
   clear: both;
 }
 
-body {
+/* body {
   background: #76777c;
   color: #f1f1f1;
   font-weight: normal;
   font-size: 1em;
   font-family: 'Roboto', Arial, sans-serif;
-}
+} */
 
 input:focus,
 textarea:focus,
