--- a/src/components/home/style/hero.css
+++ b/src/components/home/style/hero.css
@@ -12,7 +12,8 @@
     z-index: 55;
     width: 100%;
     height: 90vh;
-    background-color:#000000b2
+    background-color:#000000b2;
+    border-bottom: #a38350 solid 2px;
 }
 .heroImg{
     object-fit: cover;
