--- a/src/components/home/style/recom.module.css
+++ b/src/components/home/style/recom.module.css
@@ -2,11 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 .rateContainer {
-  width: 90%;
+  width: 100%;
   margin: auto;
   overflow: hidden;
   display: flex;
-  justify-content: space-around;
+  justify-content:space-around;
   flex-direction: row;
   flex-wrap:wrap;
 
@@ -14,6 +14,7 @@
 
 .topRatedH {
   margin-top: 50px;
+  margin-bottom: 2rem;
   text-align: center;
   font-family: "Ma Shan Zheng", cursive;
   font-size: 3rem;
@@ -30,9 +31,10 @@
   inset -6px -6px 12px #28292e;
 }
 .wrapper{
+  border: solid #a38350 0.1em;
   position: relative;
   width: 275px;
-  margin: 2rem;
+  margin-top: 1rem;
   padding: 30px;
   border-radius: 10px;
   display: flex;
@@ -42,7 +44,7 @@
 }
 .wrapper .icon{
   font-size: 17px;
-  color: #31344b;
+  color: #a38350;
   position: absolute;
   cursor: pointer;
   opacity: 0.7;
@@ -67,7 +69,8 @@
 .wrapper .imgArea{
   height: 150px;
   width: 150px;
-  border-radius: 50%;
+  border-radius: 48% 52% 10% 90% / 50% 60% 40% 50% ;
+  
   display: flex;
   align-items: center;
   justify-content: center;
@@ -75,12 +78,12 @@
 .imgArea .innerArea{
   height: calc(100% - 25px);
   width: calc(100% - 25px);
-  border-radius: 50%;
+  border-radius: 48% 52% 10% 90% / 50% 60% 40% 50% ;
 }
 .innerArea img{
   height: 100%;
   width: 100%;
-  border-radius: 50%;
+  border-radius: 48% 52% 10% 90% / 50% 60% 40% 50% ;
   object-fit: cover;
 }
 .wrapper .name{
@@ -208,103 +211,4 @@
   pointer-events: auto;
 }
 
-/* 
-/**
-
-@import url(https://fonts.googleapis.com/css?family=Open+sans);
-@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
-@import url(https://fonts.googleapis.com/css?family=Playfair+Display);
-.snip1515 {
-  font-family: 'Open Sans', Arial, sans-serif;
-  position: relative;
-  margin: 64px;
-  float: left;
-  min-width: 230px;
-  max-width: 315px;
-  width: 34%;
-  color: #000000;
-  text-align: center;
-  line-height: 1.4em;
-  font-size: 14px;
-  box-shadow: none !important;
-
-}
-
-.snip1515 * {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.snip1515 .profile-image {
-  display: inline-block;
-  width: 80%;
-  z-index: 1;
-  position: relative;
-  padding: 10px;
-  border: 2px solid #e8b563;
-}
-
-.snip1515 .profile-image img {
-  max-width: 100%;
-  vertical-align: top;
-}
-
-.snip1515 figcaption {
-  width: 100%;
-  background-color: #F2F2F2;
-  color: #555;
-  padding: 125px 25px 25px;
-  margin-top: -100px;
-  display: inline-block;
-}
-
-.snip1515 h3,
-.snip1515 h4,
-.snip1515 p {
-  margin: 0 0 5px;
-}
-
-.snip1515 h3 {
-  font-weight: 600;
-  font-size: 1.3em;
-  font-family: 'Playfair Display', Arial, sans-serif;
-}
-
-.snip1515 h4 {
-  color: #8c8c8c;
-  font-weight: 400;
-  letter-spacing: 2px;
-}
-
-.snip1515 p {
-  font-size: 0.9em;
-  letter-spacing: 1px;
-  opacity: 0.9;
-}
-
-.snip1515 .icons {
-  text-align: center;
-  width: 100%;
-}
-
-.snip1515 i {
-  padding: 10px 2px;
-  display: inline-block;
-  font-size: 18px;
-  font-weight: normal;
-  color: #e8b563;
-  opacity: 0.75;
-}
-
-.snip1515 i:hover {
-  opacity: 1;
-  -webkit-transition: all 0.35s ease;
-  transition: all 0.35s ease;
-}
-
-
-
-
- */
-
-/*//////////////////////////////////*/
+/*------------ finsh cards------------------*/
