--- a/src/components/allBarbers/style/AllBarbers.module.css
+++ b/src/components/allBarbers/style/AllBarbers.module.css
@@ -8,10 +8,10 @@ html {
   box-sizing: border-box;
 }
 
-/* body {
+body {
   font-family: 'Quicksand', sans-serif;
   color: #324e63;
-} */
+}
 
 a,
 a:hover {
