--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -3,22 +3,19 @@
 .ahheader{
     position: fixed;
     top: 0;
-    left: 0;
+    display: flex;
     width: 100%;
     z-index: 200;
-    background-color: #1F2024;
-    display: flex;
+    background-color: #1f2024;
     justify-content: space-between;
-    align-items: center;
-    padding: 0px 5%;
+    border-bottom: #a38350 solid 1px;
 }
-.ahnava{    
-    display: inline-block;
-}
+
 .ahlogo{
     font-family: 'Montserrat', sans-serif;
     cursor: pointer;
     color:  #edf0f1;
+    padding-left: 1rem;
 }
 
 .nav__link{
@@ -50,7 +47,7 @@
 
 .AhlogOut{
     padding: 9px 25px;
-    margin: 0px 0px 0px 0px;
+    margin: 1rem;
     background-color: #fff;
     border: none;
     border-radius: 50px;
