--- a/src/components/barber/styles/services.module.scss
+++ b/src/components/barber/styles/services.module.scss
@@ -1,11 +1,11 @@
 .outerContainer {
-  color: #2b2b33;
+  color: #f1f1f1;
   width: 80%;
   position: relative;
   margin: 0rem auto 4rem;
 }
 .container {
-  line-height: 1.5rem;
+  line-height: 0rem;
   margin-bottom: 0.5rem;
 }
 
@@ -14,10 +14,11 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #f1f1f1;
+  background-color: #27282e;
   padding: 0.5rem 2rem;
-  border: 2px solid #c7b74e;
-  border-radius: 40px 40px 0px 0px;
+  // border: 2px solid #a38350;
+  border-radius: 0px 90px 0px 0px;
+  box-shadow: inset 6px 6px 12px #17171a, inset -6px -6px 12px #27292e;
   img {
     width: 3rem;
     max-height: 3rem;
@@ -31,15 +32,16 @@
 }
 
 .wrapper2 {
+  color: #a38350;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #f1f1f1;
+  background-color: #27282e;
   padding: 0.5rem 2rem;
-  border: 2px solid #c7b74e;
+  border: 2px solid #a38350;
   border-bottom: none;
-  border-radius: 40px 40px 0px 0px;
+  border-radius: 0px 90px 0px 0px;
   img {
     width: 3rem;
     max-height: 3rem;
@@ -52,12 +54,12 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  background-color: #f1f1f1;
+  background-color: #27282e;
   padding: 0.5rem 2rem;
-  border: 2px solid #c7b74e;
+  border: 2px solid #a38350;
   border-top: none;
-  border-radius: 0px 0px 40px 40px;
-  color: rgb(80 76 76 / 90%);
+  border-radius: 0px 0px 90px 0px;
+  color: #f1f1f1bd;
 }
 
 .btn {
@@ -74,4 +76,3 @@
     color: rgb(0, 117, 250);
   }
 }
-
