--- a/src/components/barber/styles/reviews.module.scss
+++ b/src/components/barber/styles/reviews.module.scss
@@ -1,6 +1,6 @@
 .container {
   position: relative;
-  background-color: #27282e;
+  // background-color: #27282e;
   width: 80%;
   margin: 0rem auto 4rem;
   color: #f1f1f1;
@@ -106,7 +106,3 @@
     }
   }
 }
-
-// #27282E gry
-// 1f2024 blk
-// a38350 org
