--- a/src/components/barber/styles/subscriber.module.scss
+++ b/src/components/barber/styles/subscriber.module.scss
@@ -1,7 +1,7 @@
 .container {
   width: 80%;
   margin: 0 auto 4rem;
-  background-color: #27282e;
+  // background-color: #27282e;
   border-radius: 5px 5px 5px 5px;
   color: #f1f1f1;
 
