--- a/src/components/barber/styles/services.module.scss
+++ b/src/components/barber/styles/services.module.scss
@@ -14,7 +14,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #27282e;
+  // background-color: #27282e;
   padding: 0.5rem 2rem;
   border-radius: 40px 40px 0px 0px;
   box-shadow: inset 6px 6px 12px #17171a, inset -6px -6px 12px #27292e;
@@ -36,7 +36,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #27282e;
+  // background-color: #27282e;
   padding: 0.5rem 2rem;
   border: 2px solid #a38350;
   border-bottom: none;
@@ -53,7 +53,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  background-color: #27282e;
+  // background-color: #27282e;
   padding: 0.5rem 2rem;
   border: 2px solid #a38350;
   border-top: none;
