--- a/src/components/barber/styles/media.module.scss
+++ b/src/components/barber/styles/media.module.scss
@@ -1,6 +1,67 @@
+@import url('https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap');
+
 .container {
   width: 80%;
   margin: 4rem auto 4rem;
-  background-color: #f1f1f1;
   color: black;
+
 }
+.bodyy{
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  background-color:#1f2024;
+  align-items: center;
+  flex-direction: column;
+  font-family: sans-serif;
+  box-shadow:  inset 6px 6px 5px #1a1b1f,
+  inset -6px -6px 5px #242529;
+  margin-bottom: 5rem
+;
+  h1{
+    color: #a38350;
+    font-size: 3rem;
+    font-family: 'Ma Shan Zheng', cursive;
+  }
+}
+
+.gridCcontainer {
+  columns: 5 200px;
+  column-gap: 1.5rem;
+  width: 90%;
+  margin: 0 auto;
+  div {
+    width: 150px;
+    margin: 0 1.5rem 1.5rem 0;
+    display: inline-block;
+    width: 100%;
+    border: solid 2px black;
+    padding: 5px;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+    border-radius: 5px;
+    transition: all .5s ease-in-out;
+    &:hover img {
+      filter: grayscale(0);
+    }
+    &:hover {
+      border-color: #a38350;
+    }
+    img {
+      width: 100%;
+      filter: grayscale(100%);
+      border-radius: 5px;
+      transition: all .25s ease-in-out;
+    }
+    p {
+      margin: 5px 0;
+      padding: 0;
+      text-align: center;
+      font-style: italic;
+    }
+  }
+}
+
+
+
+
