--- a/src/components/barber/styles/services.module.scss
+++ b/src/components/barber/styles/services.module.scss
@@ -3,7 +3,20 @@
   width: 80%;
   position: relative;
   margin: 0rem auto 4rem;
+
+  h2 {
+    color: #a38350;
+    width: fit-content;
+    margin: 1rem auto 4rem;
+  }
+  span {
+    font-weight: normal;
+    color: #f1f1f1;
+    font-size: 0.85rem;
+    margin: 0.5rem 0 0;
+  }
 }
+
 .container {
   line-height: 0rem;
   margin-bottom: 0.5rem;
@@ -14,7 +27,6 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  // background-color: #27282e;
   padding: 0.5rem 2rem;
   border-radius: 40px 40px 0px 0px;
   box-shadow: inset 6px 6px 12px #17171a, inset -6px -6px 12px #27292e;
@@ -24,10 +36,18 @@
     border-radius: 100%;
     background-color: #f1f1f1;
   }
+
+  .deleteBtn {
+    cursor: pointer;
+    &:hover {
+      color: rgb(223, 47, 3);
+    }
+  }
 }
 
 .hidden {
   visibility: hidden;
+  height: 0;
 }
 
 .wrapper2 {
@@ -36,16 +56,23 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  // background-color: #27282e;
   padding: 0.5rem 2rem;
   border: 2px solid #a38350;
   border-bottom: none;
   border-radius: 40px 40px 0px 0px;
+
   img {
     width: 3rem;
     max-height: 3rem;
     border-radius: 100%;
     background-color: #f1f1f1;
+  }
+
+  .deleteBtn {
+    cursor: pointer;
+    &:hover {
+      color: rgb(223, 47, 3);
+    }
   }
 }
 
@@ -53,12 +80,32 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
+  padding: 0.5rem 2rem;
+  border: 2px solid #a38350;
+  border-top: none;
+  border-radius: 0px 0px 40px 40px;
+  color: #f1f1f1bd;
+}
+
+.wrapper4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   // background-color: #27282e;
   padding: 0.5rem 2rem;
   border: 2px solid #a38350;
   border-top: none;
   border-radius: 0px 0px 40px 40px;
   color: #f1f1f1bd;
+
+  h5 {
+    font-weight: normal;
+    color: #f1f1f1;
+  }
+  h5 span {
+    font-weight: 700;
+    color: #a38350;
+  }
 }
 
 .btn {
