--- a/src/components/barber/styles/subscriber.module.scss
+++ b/src/components/barber/styles/subscriber.module.scss
@@ -10,7 +10,6 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    grid-gap: 1rem;
     gap: 1rem;
     justify-content: center;
 
@@ -37,6 +36,7 @@
     align-items: center;
 
     .start {
+      width: 33.33%;
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -64,10 +64,20 @@
       }
     }
 
+    .body {
+      width: 33.33%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+
     .end {
+      width: 33.33%;
+      margin-right: 1rem;
       display: flex;
       flex-direction: row;
       gap: 1rem;
+      justify-content: flex-end;
 
       .icon {
         border-radius: 100%;
