--- a/src/components/barber/styles/products.module.scss
+++ b/src/components/barber/styles/products.module.scss
@@ -9,6 +9,12 @@
     width: fit-content;
     margin: 0 auto 4rem;
     color: #a38350;
+
+    span {
+      font-weight: normal;
+      font-size: 0.85rem;
+      color: #f1f1f1;
+    }
   }
 
   .allCard {
