--- a/src/components/barber/styles/reviews.module.scss
+++ b/src/components/barber/styles/reviews.module.scss
@@ -12,6 +12,12 @@
   h2 {
     margin: 0.5rem auto 2rem;
     color: #a38350;
+
+    span {
+      font-weight: normal;
+      color: #f1f1f1;
+      font-size: 0.85rem;
+    }
   }
 
   .card {
