--- a/src/components/ClientProfile/style/card.module.css
+++ b/src/components/ClientProfile/style/card.module.css
@@ -66,6 +66,7 @@
   border-radius: 50%;
   margin: 0 20px 30px;
   width: 120px;
+  height: 120px;
   border: 2px solid #a38350;
   padding: 2px;
   float: left;
