--- a/src/components/barber/styles/products.module.scss
+++ b/src/components/barber/styles/products.module.scss
@@ -50,7 +50,6 @@
       align-items: center;
       background-color: #1f2024;
       box-shadow: 6px 5px 27px -2px #000000;
-      transition: ease-in-out 3s;
 
       &:hover {
         box-shadow: inset 6px 6px 12px #17171a, inset -6px -6px 12px #27292e;
@@ -60,30 +59,33 @@
         display: flex;
         flex-direction: column;
         position: relative;
+        transition: ease-in-out 0.3s;
 
         img {
           width: 85%;
+          height: 88%;
           margin: 7.5%;
           display: block;
         }
 
-        div:nth-child(2) {
+        .hidden {
           display: none;
         }
 
+        .image {
+          transition: ease-in-out 0.3s;
+        }
+
         &:hover {
-          div:first-child {
-            img {
-              opacity: 0.4;
-            }
+          .image {
+            opacity: 0.4;
           }
 
-          div:nth-child(2) {
+          .hidden {
             display: flex;
             position: absolute;
             top: 50%;
-            left: 20%;
-            width: 60%;
+            width: 100%;
             padding: 0.5rem 0;
             flex-direction: row;
             justify-content: center;
@@ -93,9 +95,9 @@
         }
 
         .icon {
+          transition: ease-in-out 0.3s;
           &:hover {
-            color: #f1f1f1;
-            background-color: #a38350;
+            color: #e4971d;
           }
         }
       }
