--- a/src/components/barber/styles/subscriber.module.scss
+++ b/src/components/barber/styles/subscriber.module.scss
@@ -60,7 +60,8 @@
       img {
         border-radius: 100%;
         border: 1px solid #a38350;
-        width: 4rem;
+        width: 80px;
+        height: 80px;
       }
     }
 
