--- a/src/components/barber/styles/reviews.module.scss
+++ b/src/components/barber/styles/reviews.module.scss
@@ -42,7 +42,8 @@
 
     img {
       border-radius: 100%;
-      max-width: 4rem;
+      max-width: 80px;
+      height: 80px;
       border: 1px solid #a38350;
       margin-right: 1rem;
     }
@@ -109,6 +110,15 @@
 
     a {
       text-decoration: none;
+      div {
+        span {
+          transition: ease-in-out 0.3s;
+        }
+      }
+    }
+
+    :hover {
+      color: #f1f1f1;
     }
   }
 }
