--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -49,6 +49,9 @@
     cursor: pointer;
 
 }
+.aanav__link:nth-child(4) div svg{
+    position: absolute;
+}
 
 .aanav__link li a {
     font-family: 'Montserrat', sans-serif;
